--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 		<java.version>1.7</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<args4j.version>2.0.21</args4j.version>
-		<cling.version>1.0.5</cling.version>
+		<cling.version>2.0.1</cling.version>
 		<teleal.version>1.0.14</teleal.version>
 		<jetty.version>8.1.8.v20121106</jetty.version>
 		<commonsio.version>2.4</commonsio.version>
@@ -118,13 +118,13 @@
 		<!-- Cling -->
 
 		<dependency>
-			<groupId>org.teleal.cling</groupId>
+			<groupId>org.fourthline.cling</groupId>
 			<artifactId>cling-core</artifactId>
 			<version>${cling.version}</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.teleal.cling</groupId>
+			<groupId>org.fourthline.cling</groupId>
 			<artifactId>cling-support</artifactId>
 			<version>${cling.version}</version>
 		</dependency>
