--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
 		<dependency> <!-- https://github.com/vitalidze/chromecast-java-api-v2 -->
 			<groupId>su.litvak.chromecast</groupId>
 			<artifactId>api-v2</artifactId>
-			<version>0.0.7-SNAPSHOT</version>
+			<version>0.9.0</version>
 		</dependency>
 
 		<dependency>
