--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,12 @@
 			<version>${commonsio.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
+
 		<!-- Logging -->
 
 		<dependency>
