--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<args4j.version>2.0.21</args4j.version>
 		<cling.version>2.0.1</cling.version>
 		<teleal.version>1.0.14</teleal.version>
+		<jetty.version>8.1.8.v20121106</jetty.version>
 		<commonsio.version>2.4</commonsio.version>
 		<logback.version>1.0.9</logback.version>
 		<slf4j.version>1.7.2</slf4j.version>
@@ -152,6 +153,14 @@
 			<groupId>com.google.protobuf</groupId>
 			<artifactId>protobuf-java</artifactId>
 			<version>2.6.0</version>
+		</dependency>
+
+		<!-- Jetty -->
+
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-servlet</artifactId>
+			<version>${jetty.version}</version>
 		</dependency>
 
 		<!-- Util -->
