--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
 
 		<repository>
 			<id>maven.jenkins-ci.org</id>
-			<url>http://maven.jenkins-ci.org/releases/</url>
+			<url>http://repo.jenkins-ci.org/releases/</url>
 			<layout>default</layout>
 			<releases>
 				<enabled>true</enabled>
